# awesome-ChatGPT-repositories

./: .gitignore  CLAUDE.md  README.md  So, 1 x 01 is equal to 1. 01x01=01  awesome-ChatGPT-repositories.json  contributing.md  newfile.txt  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.claude/commands/: awesome-chatgpt.md
.github/workflows/: jekyll-gh-pages.yml
docs/: README.en.md  README.ja.md  README.zh-hans.md  README.zh-hant.md
plugins/awesome-chatgpt-search/: README.md  build_data.py
plugins/awesome-chatgpt-search/.claude-plugin/: plugin.json
plugins/awesome-chatgpt-search/data/: repos-awesome-lists.json  repos-browser-extensions-a.json  repos-browser-extensions-b.json  repos-browser-extensions.json  repos-chatbots-a.json  repos-chatbots-b.json  repos-clis-a.json  repos-clis-b.json  repos-clis.json  repos-langchain.json  repos-nlp-a.json  repos-nlp-b.json  repos-openai-a.json  repos-openai-b.json  repos-others-a.json  repos-others-b.json  repos-prompts.json  repos-reimplementations.json  repos-tutorials.json  repos-unity.json
plugins/awesome-chatgpt-search/skills/search/: SKILL.md
skills/search/: SKILL.md
skills/search/scripts/: search.py
src/awesome_chatgpt_skill/: __init__.py  cli.py
