[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "awesome-chatgpt-skill"
version = "1.0.0"
description = "Search 2500+ curated ChatGPT and LLM repositories from Claude Code / Codex"
readme = "README.md"
license = {text = "CC0-1.0"}
authors = [{name = "taishi-i"}]
requires-python = ">=3.8"
keywords = ["chatgpt", "llm", "claude-code", "codex", "skill", "awesome-list"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication",
    "Programming Language :: Python :: 3",
]

[project.scripts]
awesome-chatgpt = "awesome_chatgpt_skill.cli:main"

[project.urls]
Homepage = "https://github.com/taishi-i/awesome-ChatGPT-repositories"
Repository = "https://github.com/taishi-i/awesome-ChatGPT-repositories"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"awesome_chatgpt_skill" = ["data/*.json"]
